Application wired with mongodb